# nftlist

./: .gitignore  ABOUT.md  Dockerfile  LICENSE  README.md  compose.yaml  do_release.sh  docker-compose.yaml  entry.sh  nft-helper  nft-helper.daily.sh  nft-helper.sh  nft-update  nft-update-sets.sh  pyproject.toml  run.py  setup.py  test.list
docker/: Dockerfile
examples/: example1-input.list  example1-input.nft  example1.0-workstation.nft  example1.1-input.list  example1.1-workstation.nft  example1.2-workstation.nft  example2.0-router.nft  example2.1-router.nft  example2.list  packages-by-type-counter.nft  router-1.nft  router-2.list  router-2.nft  set-definition.nft  test.nft  workstation-1.nft  workstation-2.list  workstation-2.nft
helpers/: prepare_local_pythons.sh  split_inet_addresses.py
lists/_local/: broadcast-ipv4.list  localnet-ipv4.list  localnet-ipv6.list
lists/_localnet/: broadcast-ipv4.list  localnet-ipv6.list
lists/bitbucket/: README.md  bitbucket-all-inet.list  bitbucket-out-inet.list  bitbucket-out_email-inet.list
lists/cloudflare/: README.md  cloudflare-ipv4.list  cloudflare-ipv6.list
nftlist/: __init__.py  nftlist.py
nftlist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sandbox/: Dockerfile  compose.yaml
setup/: conf.ini  nftlist  nftlist.init  nftlist.service  refresh-nftlist.sh
src/: nft-helper  nft-helper.sh  nft_example.py  nftlist-little.sh  nftlist-scratch.py  nftlist.py  nftlist.sh  test.py
test/: nft_set-map-vmap.list  nft_set-map-vmap.sh  nft_settings.sh  test_tbl-test_out-testset.list
(+30 files in other folders)
